--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <title>Essai devops</title>
+  <title>Projet devops</title>
+  <meta charset="UTF-8" />
+  <style>
+    body{
+      margin: 0;
+      text-align: center;
+      padding-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-  Sur docker ? Presque. Enfin ça fonctionne ! :)
+  <h1>Projet terminé !</h1>
 </body>
